--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,10 +2,10 @@ name: Deploy
 
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 concurrency:
-  group: deploy-master
+  group: deploy-main
   cancel-in-progress: true
 
 jobs:
@@ -23,8 +23,8 @@ jobs:
             cd ~/buildings.na4u.ru/buildings/
             flock -n /tmp/deploy.lock bash -lc '
               git fetch origin
-              git checkout master
-              git reset --hard origin/master
+              git checkout main
+              git reset --hard origin/main
               git clean -fd
               php yii migrate --interactive=0
               php yii build
